# projctl

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml  setup-dev.sh  setup.py
ci_platform_manager/: __init__.py  __main__.py  cli.py  config.py
ci_platform_manager/handlers/: __init__.py  comment.py  creator.py  loader.py  mr_handler.py  pipeline_handler.py  search.py  sync.py  updater.py
ci_platform_manager/utils/: config_migration.py  git_helpers.py  glab_runner.py  logging_config.py  validation.py
glab-management/: glab_tasks_management.py
projctl/: CLAUDE.md  __main__.py  cli.py  config.py  exceptions.py
projctl/examples/: external-dependencies-example.yaml
projctl/formatters/: __init__.py  ticket_formatter.py  utils.py
projctl/handlers/: creator.py  github_creator.py  github_loader.py  github_mr_handler.py  github_search.py  github_updater.py  labels.py  loader.py  mr_handler.py  pipeline_handler.py  sync.py  updater.py  wiki.py
projctl/utils/: __init__.py  cli_runner.py  config_migration.py  gh_runner.py  git_helpers.py  glab_runner.py  mr_builder.py  validation.py
scripts/: migrate_config.py  modularize_phase1.py
tests/: __init__.py  conftest.py  test_cli_platform_branch.py  test_config.py  test_exceptions.py  test_utils_config_migration.py  test_utils_git_helpers.py  test_utils_validation.py
tests/fixtures/: __init__.py  config_new.yaml  config_old.yaml  epic.yaml  github_config.yaml  issue.yaml
tests/formatters/: test_ticket_formatter.py  test_utils.py
tests/handlers/: __init__.py  test_creator.py  test_creator_dependencies.py  test_github_creator.py  test_github_loader.py  test_github_mr_handler.py  test_github_search.py  test_labels.py  test_loader.py  test_mr_handler.py  test_pipeline_handler.py  test_search.py  test_sync.py  test_updater.py  test_wiki.py
tests/regression/: __init__.py  test_cli_parity.py  test_config_migration.py
tests/utils/: test_cli_runner.py  test_mr_builder.py
